# nodi-edge

./: .gitignore  DEPLOY.md  nodi-edge-data  nodi-edge-setup.sh  pyproject.toml
apps/cloud/: __init__.py  main.py
apps/launcher/: main.py
apps/monitor/: .gitignore  main.py
apps/supervisor/: main.py
apps/test/: main.py
docs/: config_requirement.md
docs/plans/: 2026-02-20-app-execution-strategy-design.md  2026-02-20-app-execution-strategy-plan.md
examples/: myapp.service
install/: README.md  install_packages.py  install_serial.py  install_users.py  tool.py
install/services/: ne-launcher.service  ne-supervisor.service
scripts/: git_apps.py
src/nodi_edge/: __init__.py  app.py  config.py  db.py  interface_app.py  intf_app.py  license.py  states.py
src/nodi_edge_apps/cloud/: __init__.py  __main__.py  config.py  core.py
src/nodi_edge_apps/monitor/: __main__.py  core.py
src/nodi_edge_apps/supervisor/: __main__.py  core.py
src/nodi_edge_interface/modbus_tcp_client/: __main__.py  core.py
src/nodi_edge_intf/: __init__.py
src/nodi_edge_intf/modbus_tcp_client/: __main__.py  core.py
tests/: conftest.py  test_app_reconfigure.py  test_db_app_registry.py  test_db_conn.py  test_integration_execution.py  test_interface_app.py  test_intf_app.py  test_mtc_entry.py  test_supervisor_conn.py
tools/: csv_loader.py  init_db.py  view.py
