[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodi-edge"
dynamic = ["version"]
description = "Edge application framework with Databus, FSM, and Logger"
requires-python = ">=3.9"
dependencies = [
    "nodi-databus",
    "nodi-libs",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.version]
path = "src/nodi_edge/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nodi_edge"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
